gcc-14.2.0/gcc/testsuite/gdc.test/compilable/extra-files/example7190/models/HomeModel.d
version https://git-lfs.github.com/spec/v1
oid sha256:506387cd0ed05866cc9191a34aac5ae2e492c49a9f15b1419e4163f7ce1fa5f4
size 179
