gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail6242.d
version https://git-lfs.github.com/spec/v1
oid sha256:457461342b4c0c47fc2d5b21865c85dbb373a5d26afed302bfd9381745f9267b
size 266
